Fixes pageheader styles and button icon spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -149,29 +149,6 @@
     font-size: 1.125em;
     line-height: 1.85;
     scroll-behavior: smooth;
-
-    --color-brand-blue-dark: 36 53 68;
-    --color-brand-blue: 56 140 193;
-    --color-brand-blue-light: 84 159 215;
-    --color-brand-blue-lighter: 181 225 249;
-    --color-brand-purple: 198 143 244;
-    --color-brand-red: 230 43 74;
-    --color-brand-cream: 253 250 246;
-    --color-brand-cream-light: 237 242 244;
-    --color-primary-blue: 138 230 251;
-    --color-primary-green: 190 242 100;
-    --color-primary-yellow: 255 222 105;
-    --color-text-body: 62 51 85;
-    --color-text-heading: 62 51 85;
-    --color-text-bold: 62 51 85;
-    --color-text-muted: 100 116 139;
-    --color-text-link: 6 182 212;
-    --color-text-code: 0 0 0;
-    --color-text-selection: 0 0 0;
-    --color-bg-body: 255 255 255;
-    --color-bg-code: 254 243 199;
-    --color-bg-selection: 217 249 157;
-    --color-border-code: 255 237 213;
   }
 
   h1,
@@ -342,6 +319,19 @@
     border: 0;
   }
 
+  .fancy-header-bg {
+    @apply bg-gradient-to-bl 
+      from-primary-blue 
+      to-primary-blue 
+      bg-no-repeat 
+      bg-bottom 
+      bg-[length:100%_40%] 
+      dark:from-primary-blue 
+      dark:to-primary-blue
+  }
+  .fancy-header-bg {
+    background-image: linear-gradient(to bottom left, theme('colors.primary.blue'), theme('colors.primary.blue'));
+  }
   /* ------ REUSABLE UTILS - END ------ */
 
   /* ---------------------------------------------------------------------- */
